# ark-analysis

./: #start_jupyter.sh#  .coveragerc  .cruft.json  .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  Dockerfile  Evaluate_Segmentation.py  Imaging Comparison.py  LICENSE  Overlap_comparison.py  README.md  Untitled.ipynb  Watershed.py  average_iou.py  caliban_processing.py  change_labels.py  compare_segmentation.py  conftest.py  deepcell_postprocessing.py  docker-bake.hcl  downsample.py  environment.yml  extract_single_cell_data.py  hatch.toml  helper_functions.py  ilastik.py  my_script.py  pr_python_37.md  preprocessing.py  pyproject.toml  pytest.ini  requirements-nodeps.txt  requirements-test.txt  requirements.txt  ruff.toml  run_network_preprocessing.py  setup.py  (+9 more)
.github/: dependabot.yml  pull_request_template.md  release-drafter-config.yml  release-drafter.yaml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  design_doc.md  feature-request-or-suggestion.md  feature-requests-or-suggestions.md  feature_request.md  help_wanted.md
.github/scripts/: get_example_dataset.py
.github/workflows/: build.yml  ci.yml  docker.yml  pypi_publish.yml  release-drafter.yaml  release-drafter.yml  release.yml  test.yml
.templates/: Deepcell_Postprocessing.ipynb  Deepcell_Preprocessing.ipynb
.toks/: .creds.enc  .s.txt
Instrument Revision/: Instrument Revision Analysis.py  data_concatenation.py
ark/: __init__.py  settings.py
ark/analysis/: dimensionality_reduction.py  dimensionality_reduction_test.py  spatial_analysis.py  spatial_analysis_context.py  spatial_analysis_test.py  visualize.py  visualize_test.py
ark/evaluation/: evaluate_segmentation.py
ark/flowsom/: preprocess.py
ark/mibi/: mibitracker_utils.py  qc_comp.py  qc_comp_test.py  tiling_utils.py  tiling_utils_test.py
ark/phenotyping/: cell_cluster_utils.py  cell_cluster_utils_test.py  cell_consensus_cluster.R  cell_som_utils.py  cell_som_utils_test.py  cluster.py  cluster_helpers.py  cluster_helpers_test.py  cluster_test.py  consensus_cluster.R  create_cell_som.R  create_pixel_som.R  create_som_matrix.R  pixel_cluster_utils.py  pixel_cluster_utils_test.py  pixel_consensus_cluster.R  pixel_som_utils_test.py  post_cluster_utils.py  post_cluster_utils_test.py  preprocess.py  preprocess_test.py  run_cell_som.R  run_pixel_som.R  run_trained_som.R  som_cluster.R  som_runner.R  som_train.R  som_utils.py  som_utils_test.py
ark/postprocessing/: extract_data_for_R.py  reformat_h5_segmentation.py
ark/preprocessing/: data_preprocessing.py
ark/segmentation/: fiber_segmentation.py  fiber_segmentation_test.py  marker_quantification.py  marker_quantification_test.py  regionprops_extraction.py  regionprops_extraction_test.py  signal_extraction.py  signal_extraction_test.py
ark/spLDA/: processing.py  processing_test.py
ark/utils/: _bootstrapping.pyx  batch_utils.py  cell_data_utils.py  cell_data_utils_test.py  data_utils.py  data_utils_test.py  deepcell_service_utils.py  deepcell_service_utils_test.py  evaluation_utils_test.py  example_dataset.py  example_dataset_test.py  google_drive_utils.py  google_drive_utils_test.py  helper_functions.py  io_utils.py  io_utils_test.py  load_utils.py  load_utils_test.py  misc_utils.py  misc_utils_test.py  notebook_update_test.py  notebooks_test.py  notebooks_test_utils.py  plot_utils.py  plot_utils_test.py  rand_utils.py  spatial_lda_utils.py  (+13 more)
docs/: Makefile  api.md  conf.py  contributing.md  index.rst  references.bib  rtd-requirements.txt
evaluation/: compare_segmentation.py  evaluate_segmentation.py  subcellular_localization.py
postprocessing/: extract_single_cell_data.py
scripts/: Deepcell_Postprocessing-Copy1.ipynb  Deepcell_Postprocessing.ipynb  Deepcell_Preprocessing-Copy1.ipynb  Deepcell_Preprocessing.ipynb  Deepcell_Preprocessing_MIBItiff-Copy1.ipynb  Deepcell_Preprocessing_MIBItiff.ipynb  Training_Data_Preprocessing.ipynb  example_spatial_analysis_script.ipynb  example_spatial_analysis_script_test.ipynb
segmentation/: __init__.py  helper_function_tests.py  helper_functions.py
templates/: 1_Segment_Image_Data.ipynb  2_Cluster_Pixels.ipynb  2_Pixie_Cluster_Pixels.ipynb  3_Cluster_Cells.ipynb  3_Pixie_Cluster_Cells.ipynb  3b_Generic_Cluster_Cells.ipynb  4_Post_Clustering.ipynb  Calculate_Mixing_Scores.ipynb  Deepcell_Postprocessing.ipynb  Deepcell_Preprocessing.ipynb  Generalized_Masking.ipynb  Image_Stitching.ipynb  LDA_Preprocessing.ipynb  LDA_Training_and_Inference-Copy1.ipynb  LDA_Training_and_Inference.ipynb  Mixing_Score.ipynb  OME-TIFF Conversion.ipynb  OME-TIFF_Conversion.ipynb  Pixie_Cluster_Cells.ipynb  Segment_Image_Data.ipynb  Segment_Image_Data_GoogleDriveExample.ipynb  Utility_Notebook.ipynb  adata-conversion-test.ipynb  anndata_conversion.ipynb  cell_neighborhood_diversity.ipynb  cell_neighbors_analysis.ipynb  example_cell_clustering.ipynb  example_fiber_segmentation.ipynb  example_flowsom_clustering.ipynb  example_fov_grid_generate.ipynb  example_manually_adjust_metaclusters.ipynb  example_mixing_score.ipynb  example_neighborhood_analysis_script.ipynb  example_pairwise_spatial_enrichment.ipynb  example_pixel_cell_clustering.ipynb  example_pixel_clustering.ipynb  example_qc_metric_eval.ipynb  example_spatial_analysis_script.ipynb  example_visualization.ipynb  ez_segmenter.ipynb  (+3 more)
templates_ark/: 1_Segment_Image_Data.ipynb  2_Cluster_Pixels.ipynb  3_Cluster_Cells.ipynb  4_Post_Clustering.ipynb  Clustering_cleanup.ipynb  Image_Stitching.ipynb  Image_Tiling.ipynb  LDA_Preprocessing.ipynb  LDA_Training_and_Inference.ipynb  Segment_Image_Data.ipynb  example_cell_clustering.ipynb  example_fiber_segmentation.ipynb  example_neighborhood_analysis_script.ipynb  example_pairwise_spatial_enrichment.ipynb  example_pixel_clustering.ipynb  example_visualization.ipynb  mantis_project.ipynb
templates_qc/: example_fov_grid_generate.ipynb  example_qc_metric_eval.ipynb  example_remap_tma_fov.ipynb  example_tiled_region_fov_generate.ipynb  example_tma_fov_generate.ipynb
tests/: synthetic_spatial_datagen.py  test_basic.py  test_utils.py
(+364 files in other folders)
