[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
dependencies = [
    "anndata",
    "numpy",
    "scipy",
    # "scanpy",
    "datasets",
    "dask[complete]",
    "dask-image",
    "scikit-image",
    "flox",
    "spatialdata @ git+https://github.com/scverse/spatialdata.git@multi_table",
    "spatialdata-plot",
    "xbatcher",
    "torch",
    "lightning",
    "boltons",
    "more-itertools",
    "rich",
    "hvplot",
    "datashader",
    # for debug logging (referenced from the issue template)
    "session-info",
    "modguard>=0.7.0",
]
name = "ark-analysis"
version = "0.0.1"
description = "A very interesting piece of code"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "angelo lab" }]
maintainers = [{ name = "angelo lab", email = "angelolab@gmail.com" }]
urls.Documentation = "https://ark-analysis.readthedocs.io/"
urls.Source = "https://github.com/angelolab/ark-analysis"
urls.Home-page = "https://github.com/angelolab/ark-analysis"

[project.optional-dependencies]
dev = ["pre-commit", "twine>=4.0.2", "ark[doc]", "ark[test]", "ark[nb]"]
jax = [
    "jax-metal; platform_system == 'Darwin'",
    "jax; platform_system != 'Darwin'",
    "jaxlib",
    "ml-dtypes",
    "jaxtyping",
    "equinox",
]
nb = ["ipywidgets", "jupyterlab", "notebook"]
doc = [
    "docutils>=0.8,!=0.18.*,!=0.19.*",
    "sphinx>=4",
    "sphinx-book-theme>=1.0.0",
    "myst-nb",
    "sphinxcontrib-bibtex>=1.0.0",
    "sphinx-autodoc-typehints",
    "sphinxext-opengraph",
    # For notebooks
    "ipykernel",
    "ipython",
    "sphinx-copybutton",
    "pandas",
    # IDE support
    "esbonio",
]
test = ["pytest", "coverage", "sphinx-pytest"]

[tool.hatch.build.targets.wheel]
packages = ["src/ark"]

[tool.coverage.run]
source = ["ark"]
omit = ["**/test_*.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
xfail_strict = true
addopts = [
    "--import-mode=importlib", # allow using test files with same name
]

[tool.ruff]
line-length = 120
src = ["src"]
extend-include = ["*.ipynb"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    "F",      # Errors detected by Pyflakes
    "E",      # Error detected by Pycodestyle
    "W",      # Warning detected by Pycodestyle
    "I",      # isort
    "D",      # pydocstyle
    "B",      # flake8-bugbear
    "TID",    # flake8-tidy-imports
    "C4",     # flake8-comprehensions
    "BLE",    # flake8-blind-except
    "UP",     # pyupgrade
    "RUF100", # Report unused noqa directives
]
ignore = [
    # line too long -> we accept long comment lines; formatter gets rid of long code lines
    "E501",
    # Do not assign a lambda expression, use a def -> lambda expression assignments are convenient
    "E731",
    # allow I, O, l as variable names -> I is the identity matrix
    "E741",
    # Missing docstring in public package
    "D104",
    # Missing docstring in public module
    "D100",
    # Missing docstring in __init__
    "D107",
    # Errors from function calls in argument defaults. These are fine when the result is immutable.
    "B008",
    # __magic__ methods are are often self-explanatory, allow missing docstrings
    "D105",
    # first line should end with a period [Bug: doesn't work with single-line docstrings]    "D400",
    # First line should be in imperative mood; try rephrasing
    "D401",
    ## Disable one in each pair of mutually incompatible rules
    # We don’t want a blank line before a class docstring
    "D203",
    # We want docstrings to start immediately after the opening triple quote
    "D213",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"docs/*" = ["I"]
"tests/*" = ["D"]
"*/__init__.py" = ["F401"]

[tool.cruft]
skip = [
    "tests",
    "src/**/__init__.py",
    "src/**/basic.py",
    "docs/api.md",
    "docs/changelog.md",
    "docs/references.bib",
    "docs/references.md",
    "docs/notebooks/example.ipynb",
]
