[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
dependencies = [
    "anndata",
    "numpy",
    "scipy",
    "scanpy",
    "datasets",
    "dask[complete]",
    "dask-image",
    "scikit-image",
    "flox",
    "spatialdata @ git+https://github.com/srivarra/spatialdata.git@fsspec_update",
    "spatialdata-plot>=0.2.0",
    "xbatcher",
    "torch",
    "lightning",
    "boltons",
    "more-itertools",
    "rich",
    "hvplot",
    "datashader",
    # for debug logging (referenced from the issue template)
    "session-info",
    "modguard",
]
name = "ark"
version = "0.0.1"
description = "A very interesting piece of code"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "angelo lab" }]
maintainers = [{ name = "angelo lab", email = "angelolab@gmail.com" }]
urls.Documentation = "https://ark-analysis.readthedocs.io/"
urls.Source = "https://github.com/angelolab/ark-analysis"
urls.Home-page = "https://github.com/angelolab/ark-analysis"

[project.optional-dependencies]
dev = ["pre-commit", "twine>=4.0.2", "ark[doc]", "ark[test]", "ark[nb]"]
jax = [
    "jax-metal; platform_system == 'Darwin'",
    "jax; platform_system != 'Darwin'",
    "jaxlib",
    "ml-dtypes",
    "jaxtyping",
    "equinox",
]
nb = ["ipywidgets", "jupyterlab", "notebook"]
doc = [
    "docutils>=0.8,!=0.18.*,!=0.19.*",
    "sphinx>=4",
    "sphinx-book-theme>=1.0.0",
    "myst-nb",
    "sphinxcontrib-bibtex>=1.0.0",
    "sphinx-autodoc-typehints",
    "sphinxext-opengraph",
    # For notebooks
    "ipykernel",
    "ipython",
    "sphinx-copybutton",
    "pandas",
    # IDE support
    "esbonio",
]
test = ["pytest", "coverage", "sphinx-pytest"]

[tool.hatch.build.targets.wheel]
packages = ["src/ark"]

[tool.coverage.run]
source = ["ark"]
omit = ["**/test_*.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
xfail_strict = true
addopts = [
    "--import-mode=importlib", # allow using test files with same name
]


[tool.cruft]
skip = [
    "tests",
    "src/**/__init__.py",
    "src/**/basic.py",
    "docs/api.md",
    "docs/changelog.md",
    "docs/references.bib",
    "docs/references.md",
    "docs/notebooks/example.ipynb",
]
